--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,12 @@ version = "0.1.0"
 authors = ["Robin Appelman <robin@icewind.nl>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+rocket = "0.4.2"
+priority-queue = "0.6.0"
+hyper = "0.12"
+futures = "0.1.29"
+dotenv = "0.15.0"
+err-derive = "0.2.1"
+rand = "0.7.2"
+uuid = { version = "0.8", features = ["serde", "v4"] }
