--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,7 @@ dotenv = "0.15.0"
 err-derive = "0.2.1"
 rand = "0.7.2"
 uuid = { version = "0.8", features = ["serde", "v4"] }
+rust-embed = "5.2.0"
+rocket_upload = "0.1.0"
+serde = "1.0.104"
+serde_json = "1.0.45"
