--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,16 +6,16 @@ edition = "2018"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-rocket = "0.4.2"
-priority-queue = "0.6.0"
-hyper = "0.12"
-futures = "0.1.29"
-dotenv = "0.15.0"
-err-derive = "0.2.1"
-rand = "0.7.2"
+rocket = "0.5.0-rc.1"
+priority-queue = "1"
+hyper = "0.14"
+dotenv = "0.15"
+err-derive = "0.3"
+rand = "0.8"
 uuid = { version = "0.8", features = ["serde", "v4"] }
-rust-embed = "5.2.0"
-rocket_upload = "0.1.0"
-serde = "1.0.104"
-serde_json = "1.0.45"
-multipart = "0.16.1"
+rust-embed = "5"
+rocket_upload = "0.1"
+serde = "1"
+serde_json = "1"
+multipart = "0.18"
+async-trait = "0.1"
