--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,8 @@ err-derive = "0.3"
 rand = "0.8"
 uuid = { version = "0.8", features = ["serde", "v4"] }
 rust-embed = "5"
-rocket_upload = "0.1"
 serde = "1"
 serde_json = "1"
 multipart = "0.18"
 async-trait = "0.1"
+futures-util = { version = "0.3" }
