--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,14 +7,14 @@ license = "MIT OR Apache-2.0"
 rust-version = "1.56.0"
 
 [dependencies]
-rocket = "0.5.0-rc.1"
-priority-queue = "1.2.1"
-dotenv = "0.15.0"
-err-derive = "0.3.1"
+rocket = "0.5.0"
+priority-queue = "1.3.2"
+dotenvy = "0.15.7"
+thiserror = "1.0.51"
 rand = "0.8.5"
-uuid = { version = "1.1", features = ["serde", "v4"] }
-rust-embed = "6.4"
-serde = "1.0.136"
-serde_json = "1.0.79"
-async-trait = "0.1.53"
-futures-util = { version = "0.3.21" }
+uuid = { version = "1.6.1", features = ["serde", "v4"] }
+rust-embed = "8.1.0"
+serde = "1.0.193"
+serde_json = "1.0.108"
+async-trait = "0.1.75"
+futures-util = "0.3.30"
